@@ -1,10 +1,13 @@
+
 package com.javis.dongkukDBmon.Camel;
 
+import com.javis.dongkukDBmon.config.AesUtil;
 import com.javis.dongkukDBmon.model.DbConnectionInfo;
 import com.javis.dongkukDBmon.model.EtlJob;
 import com.javis.dongkukDBmon.model.MonitorModule;
 import com.javis.dongkukDBmon.service.DbStatusNotifierService;
 import com.javis.dongkukDBmon.service.EtlBatchService;
+import jakarta.annotation.Resource;
 import org.springframework.context.annotation.Lazy;
 import org.springframework.jdbc.core.JdbcTemplate;
 import org.springframework.messaging.simp.SimpMessagingTemplate;
@@ -21,7 +24,10 @@ public class HealthModuleHandler extends AbstractEtlModuleHandler {
     private final SimpMessagingTemplate messagingTemplate;
     private final DbStatusNotifierService dbStatusNotifierService;
 
-    public HealthModuleHandler(@Lazy EtlBatchService batchService, InsertQueryRegistry insertQueryRegistry, SimpMessagingTemplate messagingTemplate, DbStatusNotifierService dbStatusNotifierService) {
+    public HealthModuleHandler(@Lazy EtlBatchService batchService,
+                               InsertQueryRegistry insertQueryRegistry,
+                               SimpMessagingTemplate messagingTemplate,
+                               DbStatusNotifierService dbStatusNotifierService) {
         this.batchService = batchService;
         this.insertQueryRegistry = insertQueryRegistry;
         this.messagingTemplate = messagingTemplate;
@@ -35,12 +41,12 @@ public class HealthModuleHandler extends AbstractEtlModuleHandler {
 
     @Override
     public void handle(EtlJob job, MonitorModule module, Long batchId) throws Exception {
-        Map<String, String> queryMap = job.getExtractQueries(); // DB타입별 쿼리
+        Map<String, String> queryMap = job.getExtractQueries();
         DbConnectionInfo target = dbRepo.findById(job.getTargetDbId()).orElseThrow();
         String targetPw = decryptPassword(target.getPassword());
-        JdbcTemplate targetJdbc = createJdbc(target, targetPw); // ✅ 한 번만 생성
+        JdbcTemplate targetJdbc = createJdbc(target, targetPw);
 
-        processSources(job, module, (src, jdbc) -> {
+        processSources(job, module, batchId, (src, jdbc) -> {
             String dbType = src.getDbType().toUpperCase();
             String query = queryMap.get(dbType);
 
@@ -69,12 +75,9 @@ public class HealthModuleHandler extends AbstractEtlModuleHandler {
                         src.getDbName(),
                         src.getDescription(),
                         message,
-                        error
-                );
+                        error);
                 messagingTemplate.convertAndSend("/topic/db-live-status", "OK");
-                String baseMessage = src.getDescription();
-                String finalMessage = isSuccess ? baseMessage : (baseMessage + " | " + error);
-
+                String finalMessage = isSuccess ? src.getDescription() : (src.getDescription() + " | " + error);
                 batchService.logJobResult(batchId, src.getId(), isSuccess, finalMessage);
 
             } catch (Exception e) {
@@ -82,13 +85,42 @@ public class HealthModuleHandler extends AbstractEtlModuleHandler {
             }
         });
     }
+
+    @Override
+    protected void handleSourceError(EtlJob job, Long batchId, DbConnectionInfo src, Exception e) {
+        try {
+            DbConnectionInfo target = dbRepo.findById(job.getTargetDbId()).orElse(null);
+            if (target == null) return;
+
+            String targetPw = decryptPassword(target.getPassword());
+            JdbcTemplate targetJdbc = createJdbc(target, targetPw);
+
+            String dbType = src.getDbType().toUpperCase();
+            String insertSql = insertQueryRegistry.getQuery("HEALTH", dbType);
+            if (insertSql != null && !insertSql.isBlank()) {
+                targetJdbc.update(insertSql,
+                        src.getDbType(),
+                        src.getDbName(),
+                        src.getDescription(),
+                        "연결 실패",
+                        e.getMessage());
+                dbStatusNotifierService.notifyStatusUpdate(src.getDbName());
+            }
+        } catch (Exception ex) {
+            // 무시
+        }
+
+        String finalMessage = src.getDescription() + " | " + e.getMessage();
+        batchService.logJobResult(batchId, src.getId(), false, finalMessage);
+    }
+
+    @Override
     public void handleSingle(EtlJob job, MonitorModule module, Long batchId, DbConnectionInfo src, JdbcTemplate jdbc) {
         Map<String, String> queryMap = job.getExtractQueries();
         String dbType = src.getDbType().toUpperCase();
         String query = queryMap.get(dbType);
 
-        // ✅ 추출 쿼리 체크
-        if (query == null || query.trim().isEmpty()) {
+        if (query == null || query.isBlank()) {
             batchService.saveJobLog(batchId, src.getId(), false, "추출 쿼리 누락: " + dbType);
             return;
         }
@@ -111,7 +143,7 @@ public class HealthModuleHandler extends AbstractEtlModuleHandler {
             JdbcTemplate targetJdbc = createJdbc(target, targetPw);
 
             String insertSql = insertQueryRegistry.getQuery("HEALTH", dbType);
-            if (insertSql == null || insertSql.trim().isEmpty()) {
+            if (insertSql == null || insertSql.isBlank()) {
                 batchService.saveJobLog(batchId, src.getId(), false, "타겟 INSERT 쿼리 미정의: " + dbType);
                 return;
             }
@@ -121,19 +153,14 @@ public class HealthModuleHandler extends AbstractEtlModuleHandler {
                     src.getDbName(),
                     src.getDescription(),
                     message,
-                    error
-            );
+                    error);
             dbStatusNotifierService.notifyStatusUpdate(src.getDbName());
         } catch (Exception e) {
             isSuccess = false;
             error = "타겟 DB 오류: " + e.getMessage();
         }
 
-        // ✅ 최종 메시지 조립 및 로그 갱신
         String finalMessage = isSuccess ? src.getDescription() : (src.getDescription() + " | " + error);
         batchService.saveJobLog(batchId, src.getId(), isSuccess, finalMessage);
     }
-
-
-
 }
